Remove manual margin-top, fix overflowing div by clearing floats from nav on main element

--- a/html-css/lesson_2/photography_blog/assets/stylesheets/stylesheet.css
+++ b/html-css/lesson_2/photography_blog/assets/stylesheets/stylesheet.css
@@ -52,10 +52,11 @@ h2 {
 }
 
 main {
+  clear: both;
   width: 960px;
   height: 1195px;
   background: #fff;
-  margin: 120px auto 0px auto;
+  margin: 0 auto;
   box-shadow: 1px 5px 2px 1px rgba(0, 0, 0, 0.2);
 }
 
